# NUSimulator

./: .CMakeLists.txt.swp  .ninja_deps  .ninja_log  CMakeLists.txt  nusimulator.sublime-workspace
cmake/Modules/: SharedLibraries.cmake
module/simulation/CameraSimulator/: CMakeLists.txt  README.md
module/simulation/CameraSimulator/src/: CameraSimulator.cpp  CameraSimulator.cpp~  CameraSimulator.h
nuclear/: Makefile  cmake_install.cmake
nuclear/cmake/Modules/: NUClearCompilerSettings.cmake
nuclear/extension/: Makefile  cmake_install.cmake
nuclear/message/: Makefile  cmake_install.cmake
nuclear/module/: Makefile  cmake_install.cmake
nuclear/module/simulation/CameraSimulator/: Makefile  cmake_install.cmake
nuclear/roles/: CameraSimulator.cpp  Makefile  cmake_install.cmake
nuclear/utility/: Makefile  cmake_install.cmake
roles/: CameraSimulator.role
